Add dual licensing (MIT + Commercial)
- LICENSE.md: dual license with MIT for open source, commercial for proprietary, includes dhtmlxGantt third-party notice
- composer.json: license field updated to ["MIT", "proprietary"]
- README.md: license section updated to reference dual licensing

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
       }
   ],
   "type": "library",
-  "license": "MIT",
+  "license": ["MIT", "proprietary"],
   "autoload": {
     "psr-4": {
       "Codenzia\\FilamentGantt\\": "src/"
